<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mcdcl</groupId>
    <artifactId>MDCL-main</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gluonfx.target>host</gluonfx.target>
    </properties>

    <dependencies>
            <!-- JMCCC 核心模块 -->
            <dependency>
                <groupId>dev.3-3</groupId>
                <artifactId>jmccc</artifactId>
                <version>3.1.4</version>
            </dependency>
            <!-- JMCCC mcdownloader 模块 -->
            <dependency>
                <groupId>dev.3-3</groupId>
                <artifactId>jmccc-mcdownloader</artifactId>
                <version>3.1.4</version>
            </dependency>
            <!-- JMCCC 微软认证模块 -->
            <dependency>
                <groupId>dev.3-3</groupId>
                <artifactId>jmccc-microsoft-authenticator</artifactId>
                <version>3.1.4</version>
            </dependency>
            <!-- JMCCC MojangAPI 模块 -->
            <dependency>
                <groupId>dev.3-3</groupId>
                <artifactId>jmccc-mojang-api</artifactId>
                <version>3.1.4</version>
            </dependency>

        <dependency>
            <groupId>dev.3-3</groupId>
            <artifactId>jmccc-cli</artifactId>
            <version>3.1.4</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21</version>
        </dependency>
        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21</version>
        </dependency>
        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>21</version>
        </dependency>
        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>21</version>
        </dependency>
        
        <!-- 添加 JavaFX Media 模块 -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>21</version>
        </dependency>
        
        <!-- Ikonli 核心 -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        
        <!-- Material Design Icons 包 -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        
        <!-- FontAwesome 图标库 -->
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>4.7.0-9.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            

            <!-- Gluon JavaFX打包插件 -->
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.26</version>
                <configuration>
                    <mainClass>org.mcdcl.Main</mainClass>
                    <target>${gluonfx.target}</target>
                    <attachList>macos</attachList>
                    <bundlesList>macos</bundlesList>
                    <graalvmHome>/Users/zhuangweiwei/MDCL/MDCL-main/graalvm-jdk-21.0.7+8.1/Contents/Home</graalvmHome>
                    <javaHome>/Users/zhuangweiwei/MDCL/MDCL-main/graalvm-jdk-21.0.7+8.1/Contents/Home</javaHome>
                    <appName>MDCL</appName>
                    <appVersion>1.0</appVersion>
                    <vendor>org.mcdcl</vendor>
                    <icon>src/main/resources/icon.icns</icon>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>org.mcdcl.Main</mainClass>
                            <manifestEntries>
                                <Main-Class>org.mcdcl.Main</Main-Class>
                                <Class-Path>.</Class-Path>
                                <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>java.base/java.io=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Opens>
                                <Add-Exports>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Exports>
                                <Add-Exports>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</Add-Exports>
                                <Add-Opens>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</Add-Opens>
                                <Add-Exports>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Exports>
                                <Add-Exports>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</Add-Exports>
                                <Add-Opens>javafx.base/com.sun.javafx=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED</Add-Opens>
                                <Add-Opens>javafx.web/com.sun.webkit=ALL-UNNAMED</Add-Opens>
                                <Add-Exports>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</Add-Exports>
                                <Add-Exports>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</Add-Exports>
                            </manifestEntries>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                            <resource>META-INF/services/javafx.platform.Capabilities</resource>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                            <resource>module-info.class</resource>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                            <resource>META-INF/services/javafx.platform.Capabilities</resource>
                        </transformer>
                    </transformers>
                </configuration> <!-- Use a recent version -->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.mcdcl.Main</mainClass>
                                    <manifestEntries>
                                        <Main-Class>org.mcdcl.Main</Main-Class>
                                        <Class-Path>.</Class-Path>
                                        <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>java.base/java.io=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</Add-Exports>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</Add-Exports>
                                        <Add-Opens>javafx.base/com.sun.javafx=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.web/com.sun.webkit=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</Add-Exports>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                    <resource>META-INF/services/javafx.platform.Capabilities</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                    <resource>module-info.class</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>org.mcdcl.Main</Main-Class>
                                        <Class-Path>.</Class-Path>
                                        <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>java.base/java.io=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</Add-Exports>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</Add-Exports>
                                        <Add-Opens>javafx.base/com.sun.javafx=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED</Add-Opens>
                                        <Add-Opens>javafx.web/com.sun.webkit=ALL-UNNAMED</Add-Opens>
                                        <Add-Exports>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</Add-Exports>
                                        <Add-Exports>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</Add-Exports>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/services/javafx.platform.Capabilities</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                    <resource>module-info.class</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jpackage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jpackage-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <name>MDCL</name>
                            <vendor>org.mcdcl</vendor>
                            <mainClass>org.mcdcl.Main</mainClass>
                            <dest>target/jpackage</dest>
                            <appVersion>1.0</appVersion>
                            <linuxShortcut>true</linuxShortcut>
                            <winShortcut>true</winShortcut>
                            <macPackageName>MDCL</macPackageName>
                            <macPackageIdentifier>org.mcdcl.MDCL</macPackageIdentifier>
                            <macSigningKeyUser>Developer ID Application</macSigningKeyUser>
                            <icon>src/main/resources/icon.icns</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>